--- a/config/model/bbb.yaml
+++ b/config/model/bbb.yaml
@@ -1,5 +1,6 @@
 # Bayesian Neural Network specific parameters
-type: 'bnn'
+type: 'bbb'
+kl_weight: 0.01
 layers:
   - {type: 'BayesLinear', prior_mu: 0, prior_sigma: 0.1, in_features: 1, out_features: 1000}
   - {type: 'ReLU'}
