--- a/config/data/linear.yaml
+++ b/config/data/linear.yaml
@@ -1,10 +1,10 @@
-x_start: -2
-x_end: 2
+x_start: 0
+x_end: 10
 num_train_points: 500
 num_validation_points: 300
 num_test_points: 300
 gap: false
 gap_start: null
 gap_end: null
-ground_truth: 'clean_target'
-noisy_target: 'noisy_target'
+ground_truth: 'linear_func_clean_target'
+noisy_target: 'linear_func_noisy'
