--- a/config/main.yaml
+++ b/config/main.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - data: linear
-  - model: dropout
+  - data: large_sin_gap
+  - model: bbb
   - plot: default
-  - train: dropout_train
+  - train: bbb_train
