--- a/config/experiment/large_sin_gap/swag_ensemble_exp.yaml
+++ b/config/experiment/large_sin_gap/swag_ensemble_exp.yaml
@@ -4,7 +4,7 @@ defaults:
   - override /model: ensemble
   - override /model/architecture: swag
   - override /model/ensemble_type: swag_ensemble
-  - override /train: base_train
+  - override /train: swag_train
 
 exp_name: large_sin_gap_swag_ensemble
 
@@ -15,5 +15,7 @@ hydra:
       model.architecture.activation: 'ReLU'
       model.architecture.update_interval: 5
       model.architecture.max_cols: 5
+      train.swag_start: 6000
+      train.use_low_rank: true
       train.epochs: 8000
       train.learning_rate: 0.01
