--- a/config/experiment/large_sin_gap/swag_single_exp.yaml
+++ b/config/experiment/large_sin_gap/swag_single_exp.yaml
@@ -3,7 +3,7 @@ defaults:
   - override /data: large_sin_gap
   - override /model: single_model
   - override /model/architecture: swag
-  - override /train: base_train
+  - override /train: swag_train
 
 exp_name: large_sin_gap_swag_single
 
@@ -14,5 +14,7 @@ hydra:
       model.architecture.activation: 'ReLU'
       model.architecture.update_interval: 5
       model.architecture.max_cols: 5
+      train.swag_start: 6000
+      train.use_low_rank: true
       train.epochs: 8000
       train.learning_rate: 0.01
