modified sourcecode for new config

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,7 +3,13 @@ defaults:
   - model: ???
   - model/architecture: ???
   - plot: default
+  - recorder: standard_wandb
   - train: ???
+
+
+seed: ???
+
+
 
 
 
