--- a/config/experiment/large_sin_gap/dropout_ensemble_exp.yaml
+++ b/config/experiment/large_sin_gap/dropout_ensemble_exp.yaml
@@ -8,11 +8,15 @@ defaults:
 
 exp_name: large_sin_gap_dropout_ensemble
 
+recorder:
+  wandb:
+    job_type: epochs-${train.epochs}_lr-${train.learning_rate}_activation-${model.architecture.activation}_dropout_prob-${model.architecture.dropout_prob}
+
 hydra:
   mode: MULTIRUN
   sweeper:
     params:
-      model.architecture.activation: 'ReLU'
-      model.architecture.dropout_prob: 0.1
-      train.epochs: 8000
-      train.learning_rate: 0.01
+      model.architecture.activation: ReLU, Tanh
+      model.architecture.dropout_prob: 0.1, 0.3, 0.5
+      train.epochs: 5000, 10000, 15000, 20000
+      train.learning_rate: 0.01, 0.001
