--- a/config/experiment/large_sin_gap/bbb_single_exp.yaml
+++ b/config/experiment/large_sin_gap/bbb_single_exp.yaml
@@ -9,7 +9,7 @@ exp_name: large_sin_gap_bbb_single
 
 recorder:
   wandb:
-    job_type: epochs-${train.epochs}_lr-${train.learning_rate}_activation-${model.architecture.activation}_kl_weight-${model.architecture.kl_weight}
+    job_type: epochs-${train.epochs}_lr-${train.learning_rate}_activation-${model.architecture.activation}_kl_weight-${model.architecture.kl_weight}_second
 
 
 
@@ -18,7 +18,7 @@ hydra:
   sweeper:
     params:
       model.architecture.activation: Tanh, ReLU
-      model.architecture.kl_weight: 0.01, 0.1
-      train.epochs: 5000, 10000, 15000, 20000
-      train.learning_rate: 0.001, 0.01
-      seed: 0
+      model.architecture.kl_weight: 0.01
+      train.epochs: 15000, 20000
+      train.learning_rate: 0.01, 0.001
+      seed: 0, 5
