--- a/config/experiment/large_sin_gap/dropout_single_exp.yaml
+++ b/config/experiment/large_sin_gap/dropout_single_exp.yaml
@@ -15,7 +15,8 @@ hydra:
   mode: MULTIRUN
   sweeper:
     params:
-      model.architecture.activation: ReLU, Tanh
+      model.architecture.activation: Tanh
       model.architecture.dropout_prob: 0.1, 0.3, 0.5
-      train.epochs: 5000, 10000, 15000, 20000
+      train.epochs: 10000, 15000, 20000
       train.learning_rate: 0.01, 0.001
+      seed: 0, 5
